CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT("kruskal_boruvka")

INCLUDE(CheckCXXCompilerFlag)

SET(CMAKE_CXX_FLAGS_RELEASE     "-O2 -g")
SET(CMAKE_CXX_FLAGS_DEBUG       "-O0 -g")

CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)

IF(COMPILER_SUPPORTS_CXX11)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSEIF(COMPILER_SUPPORTS_CXX0X)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
ELSE()
    MESSAGE(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
ENDIF()

ADD_DEFINITIONS("-Wall -Wextra")

SET(TARGET_GENERATOR "graph-generator")
SET(TARGET_KRUSKAL "kruskal-test")
SET(TARGET_BORUVKA "boruvka-test")
SET(TARGET_MST "mst-test")
SET(TARGET_KRUSKAL_PROFILER "kruskal-profiler")
SET(TARGET_BORUVKA_PROFILER "boruvka-profiler")
SET(TARGET_LIST "list-test")
SET(TARGET_VECTOR "vector-test")
SET(TARGET_QUICKSORT "quicksort-test")

ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(cpp/tests)
ADD_SUBDIRECTORY(cpp/profiler)

