SET(GENERATOR_PATH ${PROJECT_SOURCE_DIR}/common)

SET(GENERATOR_SOURCES
    ${GENERATOR_PATH}/Graph.cpp
    ${GENERATOR_PATH}/GraphGenerator.cpp
    ${GENERATOR_PATH}/GraphSerialization.cpp
    ${GENERATOR_PATH}/generator.cpp)

INCLUDE_DIRECTORIES(
    ${GENERATOR_PATH}
    )

ADD_EXECUTABLE(${TARGET_GENERATOR} ${GENERATOR_SOURCES})
